syntax="proto3";

option go_package = "./protobuf";

package greet_service;

service Greet_service{

    rpc SayHello(NoParam) returns (HelloResponse);

    rpc SayHelloServerStreaming(NameList) returns (stream HelloResponse);
    
    rpc SayHelloClientStreaming(stream HelloRequest) returns (MessageList);     

    rpc SayHelloBiDirectionalStreaming(stream HelloRequest) returns (stream HelloResponse);     

}


message NoParam {}

message HelloResponse{
    string message = 1;
}

message HelloRequest{
    string name = 1;
}

message NameList{
    repeated string names = 1;
}

message MessageList{
    repeated string messages = 1;
}